scripts/generator/tests/fixtures/dportsv3/invalid/semantic/missing-target-scope.dops
port category/name
mk set VAR "value"
